fix(*): [Mobile] Update button design & Add contact info to menu & Adjust spacings, sizings and font

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import "tailwindcss";
 
 @theme {
   --color-dark-blue: #6C7C9E;
   --color-medium-blue: #B6C7DF;
   --color-light-blue: #F3F8FF;
-  --color-darker-blue: #2F3F55;
+  --color-darker-blue: #15213C;
+  --font-lato: "Lato", sans-serif;
 }
